--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
     "private": true,
     "version": "0.0.0",
     "type": "module",
-    "homepage": "https://<username>.github.io/<repository-name>",
     "scripts": {
         "dev": "vite",
-        "predeploy": "vite build",
-        "deploy": "gh-pages -d dist",
+        "deploy": "vite build",
         "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview"
     },
