--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,8 +37,8 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: npm install
-      - name: Build
-        run: npm run build
+      - name: deploy
+        run: npm run deploy
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
