--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "clsx": "^2.1.0",
         "firebase": "^10.1.0",
-        "framer-motion": "^10.15.0",
+        "framer-motion": "^10.18.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-github-calendar": "^4.0.1",
         "react-icons": "^4.10.1",
         "react-scroll": "^1.8.9",
+        "tailwind-merge": "^2.2.1",
         "uid": "^2.0.2"
     },
     "devDependencies": {
